ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accommodations-ingress
  namespace: accommodations
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: accommodations.local
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
